--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,7 @@ text-align: center;
 color: #fff;
 }
 .solution-button{
-border-radius: 4px;
-width: 169px;
-height: 56px;
-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
+background-color: #4d5ae5;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -75,7 +71,7 @@ color: #fff;
 }
 .solution-button:hover,
 .solution-button:focus{
-  background: #404bbf;
+  background-color: #404bbf;
 }
 
 
