--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
+cursor: pointer;
 }
 .solution-button:hover,
 .solution-button:focus{
@@ -96,7 +97,12 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
-
+.team{
+  background-color: #f4f4fd;
+}
+.team-item{
+  background-color: #fff;
+}
 .team-title{
 font-weight: 700;
 font-size: 36px;
@@ -104,6 +110,7 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+text-transform: capitalize;
 }
 .team-subtitle{
 font-weight: 500;
@@ -111,6 +118,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 text-align: center;
+color: #2e2f42;
 }
 .team-text{
 font-size: 16px;
@@ -127,9 +135,11 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+text-transform: capitalize;
 }
 .portfolio-subtitle{
 font-size: 20px;
+font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
